--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,44 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<android.support.v7.widget.RecyclerView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rvImages"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="pokhilko.aleksandr.ru.imgurapisample.ui.activity.MainActivity">
-
-    <LinearLayout
-        android:id="@+id/llTagInput"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true">
-
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="3">
-
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/etTag"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/default_tag"
-                android:hint="@string/hint_input_tag"/>
-
-        </android.support.design.widget.TextInputLayout>
-
-        <Button
-            android:id="@+id/btnSearch"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/btn_search"/>
-
-    </LinearLayout>
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rvImages"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/llTagInput"/>
-
-</RelativeLayout>
+    android:layout_height="wrap_content"
+    tools:context="pokhilko.aleksandr.ru.imgurapisample.ui.activity.MainActivity" />
